# sampleproject

./: .bugcatcher  .codecov.yml  .gitignore  .pylintrc  .travis.yml  DESCRIPTION.rst  Jenkinsfile3  LICENSE.txt  MANIFEST.in  Pipfile  README.md  README.rst  appveyor.yml  circle.yml  dev_requirements.txt  hello.py  main.tf  notes.txt  noxfile.py  pyproject.toml  raju  requirements-doc.txt  requirements.txt  sample  setup.cfg  setup.py  test  test.txt  tox.ini
.circleci/: config.yml
.github/workflows/: ci-testing.yml  codeql.yml  hello.yaml  pr.yml  publish.yaml  publish.yml  python-project.yml  release.yml  stage-pr.yml  terraform-security-scan.yml  test.yml  update-version.yml
dir1/: test.tf
docs/: requirements.txt
docs/source/: conf.py  examples.rst  index.rst  modules.rst  sandbox.rst
sample/: __init__.py  __main__.py  sample.py
sample/tests/: __init__.py  test_sample.py
sandbox/: __init__.py  utilities.py
src/appendzip/: appendzip.py
src/sample/: __init__.py  simple.py
tests/: __init__.py  helpers.py  test_append-zip.py  test_appendzip.py  test_simple.py
