[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt

[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support. Removing this line (or setting universal to 0) will prevent
# bdist_wheel from trying to make a universal wheel. For more see:
# https://packaging.python.org/guides/distributing-packages-using-setuptools/#wheels
universal=1


[flake8]
# http://flake8.pycqa.org/en/latest/user/configuration.html
ignore = E501
max-line-length = 100
exclude = .tox,*.egg,build,temp
select = E,W,F
doctests = True
verbose = 2
# max-complexity = 10

[tool:pytest]
log_cli = 1
log_cli_level = CRITICAL
#log_cli_format = %(message)s
log_file = pytest.log
log_file_level = DEBUG
#log_file_format = %(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)
#log_file_date_format=%Y-%m-%d %H:%M:%S
filterwarnings = ignore::FutureWarning

[pydocstyle]
convention = pep257
# D104, D107: Ignore missing docstrings in __init__ files and methods.
# D202: Ignore a blank line after docstring (collision with Python Black in decorators)
add-ignore = D104,D107,D202
max-line-length = 120

[coverage:run]
relative_files = True
