[metadata]
name = appendzip
version = 0.0.5
author = Michael Salaverry
author_email = barakplasma@gmail.com
description = Append a single file to zip, overwriting the existing file if necessary
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/barakplasma/append-zip
project_urls =
    Bug Tracker = https://github.com/barakplasma/append-zip/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir == src
packages = appendzip
python_requires = >=3.6

[options.extras_require]
dev = check-manifest
test = coverage